--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,6 @@
+ver 1.1.6, Dec 6 2018
+  types of strains to be processed are now in the property file (no longer hard-coded)
+
 ver 1.1.5, Sep 27 2018
   moved from subversion to github
 
