report strain symbols inconsistent with gene nomenclature, instead of updating strain symbols, nomen events and aliases

--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,10 @@
+ver 2.0.0, May 9 2019
+  discontinued any strain updates and generation of nomenclature and alias events;
+  instead, we report the strains that should be reviewed for nomenclature changes
+
+ver 1.1.7, Feb 21 2019
+  added 'nomenclatureRefKey' to property file
+
 ver 1.1.6, Dec 6 2018
   types of strains to be processed are now in the property file (no longer hard-coded)
 
